--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "tslint": "^6.1.3",
     "typescript": "^4.2.4"
@@ -17,6 +19,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^9.0.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mariadb": "^2.5.3",
+    "sequelize": "^6.6.2"
   }
 }
